# UI-Scraper

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATA_EXPLORER_FIX.md  GITHUB_UPLOAD.md  JOBS_PAGE_FIXES.md  PIPELINE_JOB_EXPLANATION.md  README.md  README_WEB_APP.md  RUNNING_STATUS.md  SETUP_AND_RUN.md  diagnose_pipeline.py  docker-compose.yml  explain_pipeline_issue.py  ferreterias_job_result.json  main.py  pipeline_explanation.md  pyproject.toml  requirements.txt  settings.py  test_pipeline.py  test_pipeline_api.sh  test_pipeline_job.py
backend/: .env.example  Dockerfile  README.md  requirements.txt  run.sh
backend/app/: main.py
debug_files/search_scraping/: temp_processed_data (2025-05-30_16-19-22).json  temp_processed_data (2025-05-30_17-31-04).json  temp_processed_data (2025-05-30_18-53-49).json  temp_processed_data (2025-05-30_18-55-07).json  (+2 more)
docs/: epic-1.md  prd.md
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/components/: NewJobModal.vue  (+5 more)
input/: search_terms_list.json  search_urls_list.json  website_urls_list.json
logs/: custom_logging.py  mongodb_logging.py
schemas/: search_schema.py  website_schema.py
scrapers/: __init__.py  claude_advance_searches_generator_exp.py  llm_data_extraction.py  searches_scraping.py  websites_scraping.py  websites_scraping_with_db.py
scripts/: add_test_data.py  fix_frontend_api.sh  ingest_json_to_mongodb.py  start_local_dev.sh  start_webapp.sh  test_dashboard.py  test_scraping.py  test_setup.py  verify_system.sh
utils/: fake_headers.json  helpers.py  mongodb_client.py
(+28 files in other folders)
