[project]
name = "ui-scraper"
version = "0.1.0"
description = "AI-Powered Business Data Crawler with Web Interface for Dominican Republic businesses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "seleniumbase",
    "playwright",
    "playwright-stealth",
    "lxml-html-clean",
    "html-to-markdown",
    "setuptools",
    "crawl4ai",
    "aiohttp",
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "pymongo",
    "python-multipart",
    "pydantic-settings",
    "redis",
    "celery",
]
